FIX: Implement changes on mobile video flow handling (#114)

--- a/styles/scss/base/media/_conference.scss
+++ b/styles/scss/base/media/_conference.scss
@@ -27,6 +27,10 @@
   .messenger__header_mobile {
     display: flex;
     align-items: center;
+
+    .conference-header__logout {
+      left: 20px;
+    }
   }
 
   .video-wrapper {
